--- a/PhotoPicker/src/main/AndroidManifest.xml
+++ b/PhotoPicker/src/main/AndroidManifest.xml
@@ -1,4 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="me.iwf.photopicker">
+<manifest package="me.iwf.photopicker"
+          xmlns:android="http://schemas.android.com/apk/res/android"
+    >
 
+    <permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+
+    <permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.CAMERA"/>
+
+    <!--
+      - Include all the "features" under the camera permission,
+      - and mark them all as optional.
+      -->
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="false"
+        />
+    <uses-feature
+        android:name="android.hardware.camera.autofocus"
+        android:required="false"
+        />
+
+    <application
+        android:allowBackup="true"
+        android:theme="@style/__picker_AppTheme"
+        >
+
+        <activity
+            android:name="me.iwf.photopicker.PhotoPickerActivity"
+            android:theme="@style/__picker_customTheme"
+            />
+
+        <activity
+            android:name="me.iwf.photopicker.PhotoPagerActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar"
+            />
+
+    </application>
 </manifest>
