--- a/photopickerdemo/build.gradle
+++ b/photopickerdemo/build.gradle
@@ -21,13 +21,14 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile project(':PhotoPicker')
+//    compile project(':PhotoPicker')
+    compile(name:'PhotoPicker-release', ext:'aar')
 
 //    compile 'me.iwf.photopicker:PhotoPicker:0.8.4@aar'
 
-//    compile 'com.android.support:appcompat-v7:23.4.0'
-//    compile 'com.android.support:recyclerview-v7:23.4.0'
-//    compile 'com.android.support:design:23.4.0'
-//    compile 'com.nineoldandroids:library:2.4.0'
-//    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.android.support:recyclerview-v7:23.4.0'
+    compile 'com.android.support:design:23.4.0'
+    compile 'com.nineoldandroids:library:2.4.0'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
