--- a/photopickerdemo/src/main/AndroidManifest.xml
+++ b/photopickerdemo/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="me.iwf.PhotoPickerDemo"
+          xmlns:tools="http://schemas.android.com/tools"
+          package="me.iwf.PhotoPickerDemo"
     >
     <permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
@@ -24,6 +25,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
+        tools:replace="android:theme"
         >
         <activity
             android:name="me.iwf.PhotoPickerDemo.MainActivity"
@@ -34,17 +36,6 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-
-
-        <activity
-            android:theme="@style/customTheme"
-            android:name="me.iwf.photopicker.PhotoPickerActivity"
-            />
-
-        <activity
-            android:theme="@style/Theme.AppCompat.NoActionBar"
-            android:name="me.iwf.photopicker.PhotoPagerActivity"
-            />
 
     </application>
 
