--- a/photopickerdemo/src/main/AndroidManifest.xml
+++ b/photopickerdemo/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           xmlns:tools="http://schemas.android.com/tools"
-          package="me.iwf.PhotoPickerDemo"
+          package="com.nestia.android.photopickerdemo"
     >
     <permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
@@ -28,7 +28,7 @@
         tools:replace="android:theme"
         >
         <activity
-            android:name="me.iwf.PhotoPickerDemo.MainActivity"
+            android:name=".MainActivity"
             android:label="@string/app_name"
             >
             <intent-filter>
